--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -8,22 +8,27 @@
     background-color: #fff;
     color: black;
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
-  }
-  .brand-name {
+}
+
+.brand-name {
     text-decoration: none;
     color: black;
     font-size: 1.3rem;
     margin-left: 1rem;
-  }
-  .navigation-menu {
+}
+
+.navigation-menu {
     margin-left: auto;
-  }
-  .navigation-menu ul {
+}
+
+.navigation-menu ul {
     display: flex;
     padding: 0;
-  }
-  .navigation-menu li {
-    background-color: #4CAF50; /* Green */
+}
+
+.navigation-menu li {
+    background-color: #4CAF50;
+    /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
@@ -33,9 +38,11 @@
     font-size: 16px;
     list-style-type: none;
     margin: 0 1rem;
-  }
-  .navigation-menu li a {
+}
+
+.navigation-menu li a {
     text-decoration: none;
     display: block;
     width: 100%;
-  }
+}
+
