--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -1,13 +1,13 @@
 html.login_js {
   font-family: Georgia, 'Times New Roman', Times, serif;
   text-align: center; 
-  background-image: url("https://files.wallpaperpass.com/2019/10/food%20wallpaper%20131%20-%201920x1080.jpg");
+  background-image: url("../assets/wallpaper.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   padding-bottom: 225px;
 }
 div.login_box
 {
-  padding-left: 600px;
-  padding-right: 600px;
   padding-top: 100px;
 }
 form.login_form {
@@ -15,6 +15,8 @@ form.login_form {
   padding: 20px;
   background-color: white;
   height: 280px;
+  width: 250px;
+  margin: auto;
 }
 div.email {
   padding-top: 5px;
